--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,3 +1,38 @@
+@ARTICLE{Klypin2014,
+   author = {{Klypin}, A. and {Yepes}, G. and {Gottlober}, S. and {Prada}, F. and 
+	{Hess}, S.},
+    title = "{MultiDark simulations: the story of dark matter halo concentrations and density profiles}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1411.4001},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+     year = 2014,
+    month = nov,
+   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1411.4001K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Ludlow2014,
+   author = {{Ludlow}, A.~D. and {Navarro}, J.~F. and {Angulo}, R.~E. and 
+	{Boylan-Kolchin}, M. and {Springel}, V. and {Frenk}, C. and 
+	{White}, S.~D.~M.},
+    title = "{The mass-concentration-redshift relation of cold dark matter haloes}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1312.0945},
+ primaryClass = "astro-ph.CO",
+ keywords = {methods: numerical, dark matter},
+     year = 2014,
+    month = jun,
+   volume = 441,
+    pages = {378-388},
+      doi = {10.1093/mnras/stu483},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.441..378L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{NFW,
    author = {{Navarro}, J.~F. and {Frenk}, C.~S. and {White}, S.~D.~M.},
     title = "{A Universal Density Profile from Hierarchical Clustering}",
