added info about the steps for te MH

--- a/paper/article.tex
+++ b/paper/article.tex
@@ -4,7 +4,7 @@
 \usepackage{amssymb}
 \usepackage{graphics}
 \usepackage{graphicx}
-\usepackage{epsfig} 
+\usepackage{epsfig}
 \usepackage{hyperref}
 \def\be{\begin{equation}}
 \def\ee{\end{equation}}
@@ -23,38 +23,38 @@
 
 \newcommand{\documentname}{paper~}
 \newcommand{\LCDM}{$\Lambda$CDM~}
-\newcommand{\beq}{\begin{eqnarray}} 
-\newcommand{\eeq}{\end{eqnarray}} 
+\newcommand{\beq}{\begin{eqnarray}}
+\newcommand{\eeq}{\end{eqnarray}}
 \newcommand{\zz}{$z\sim 3$}
 
-\newcommand{\apj}{ApJ} 
-\newcommand{\apjs}{ApJS} 
-\newcommand{\apjl}{ApJL} 
-\newcommand{\aj}{AJ} 
-\newcommand{\mnras}{MNRAS} 
-\newcommand{\mnrassub}{MNRAS accepted} 
-\newcommand{\aap}{A\&A} 
-\newcommand{\aaps}{A\&AS} 
-\newcommand{\araa}{ARA\&A} 
-\newcommand{\nat}{Nature} 
+\newcommand{\apj}{ApJ}
+\newcommand{\apjs}{ApJS}
+\newcommand{\apjl}{ApJL}
+\newcommand{\aj}{AJ}
+\newcommand{\mnras}{MNRAS}
+\newcommand{\mnrassub}{MNRAS accepted}
+\newcommand{\aap}{A\&A}
+\newcommand{\aaps}{A\&AS}
+\newcommand{\araa}{ARA\&A}
+\newcommand{\nat}{Nature}
 \newcommand{\physrep}{PhR}
-\newcommand{\pasp}{PASP}   
-\newcommand{\pasj}{PASJ}   
-\newcommand{\avg}[1]{\langle{#1}\rangle} 
+\newcommand{\pasp}{PASP}
+\newcommand{\pasj}{PASJ}
+\newcommand{\avg}[1]{\langle{#1}\rangle}
 \newcommand{\ly}{{\ifmmode{{\rm Ly}\alpha}\else{Ly$\alpha$}\fi}}
-\newcommand{\hMpc}{{\ifmmode{h^{-1}{\rm Mpc}}\else{$h^{-1}$Mpc }\fi}} 
-\newcommand{\hGpc}{{\ifmmode{h^{-1}{\rm Gpc}}\else{$h^{-1}$Gpc }\fi}} 
-\newcommand{\hmpc}{{\ifmmode{h^{-1}{\rm Mpc}}\else{$h^{-1}$Mpc }\fi}} 
+\newcommand{\hMpc}{{\ifmmode{h^{-1}{\rm Mpc}}\else{$h^{-1}$Mpc }\fi}}
+\newcommand{\hGpc}{{\ifmmode{h^{-1}{\rm Gpc}}\else{$h^{-1}$Gpc }\fi}}
+\newcommand{\hmpc}{{\ifmmode{h^{-1}{\rm Mpc}}\else{$h^{-1}$Mpc }\fi}}
 \newcommand{\hkpc}{{\ifmmode{h^{-1}{\rm kpc}}\else{$h^{-1}$kpc }\fi}}
 \newcommand{\hMsun}{{\ifmmode{h^{-1}{\rm
-        {M_{\odot}}}}\else{$h^{-1}{\rm{M_{\odot}}}$~}\fi}}  
+        {M_{\odot}}}}\else{$h^{-1}{\rm{M_{\odot}}}$~}\fi}}
 \newcommand{\hmsun}{{\ifmmode{h^{-1}{\rm
-        {M_{\odot}}}}\else{$h^{-1}{\rm{M_{\odot}}}$}\fi}}  
-\newcommand{\Msun}{{\ifmmode{{\rm {M_{\odot}}}}\else{${\rm{M_{\odot}}}$}\fi}} 
-\newcommand{\msun}{{\ifmmode{{\rm {M_{\odot}}}}\else{${\rm{M_{\odot}}}$}\fi}} 
+        {M_{\odot}}}}\else{$h^{-1}{\rm{M_{\odot}}}$}\fi}}
+\newcommand{\Msun}{{\ifmmode{{\rm {M_{\odot}}}}\else{${\rm{M_{\odot}}}$}\fi}}
+\newcommand{\msun}{{\ifmmode{{\rm {M_{\odot}}}}\else{${\rm{M_{\odot}}}$}\fi}}
 \newcommand{\lya}{{Lyman$\alpha$~}}
 \newcommand{\clara}{{\texttt{CLARA}}~}
-\newcommand{\rand}{{\ifmmode{{\mathcal{R}}}\else{${\mathcal{R}}$ }\fi}} 
+\newcommand{\rand}{{\ifmmode{{\mathcal{R}}}\else{${\mathcal{R}}$ }\fi}}
 \newcommand{\hs}{{\hspace{1mm}}}
 \newcommand{\muavg}{\vert\langle\cos\theta\rangle\vert}
 % definition to produce a "less than or similar to" symbol
@@ -95,7 +95,7 @@ In the concordance cosmology paradigm the the matter content of the
 Universe are dominated by dark matter which behaves as a collisionless
 fluid under the influence of gravity. In the last three decades
 numerical experiments have made possible the simulation of large
-volumes of a Universe dominated by dark matter. 
+volumes of a Universe dominated by dark matter.
 
 One of the most striking results of these simulations is that dark
 matter clumps on galactic scales follows a universal density profile
@@ -111,7 +111,7 @@ double power law in radius, where the transition between the two
 happens at the so-called scale radius $r_s$. The ratio between the
 scale radius and the virial radius of the halo $R_v$ is known as the
 concentration $c=R_V/r_s$, a quantity that has been found to be
-correlated with the halo mass.  
+correlated with the halo mass.
 
 The relationship between halo mass and concentration is in principle
 accesible to observations and provides a potential test of LCDM on
@@ -129,7 +129,7 @@ NFW that related the maximum of the ratio of the circular velocity to
 the virial velocity. In this method at each particle radius this ratio
 is estimated to find the maximum value for this ratio; this value is
 used to find the roots of an equation which represent the
-concentration parameter. 
+concentration parameter.
 
 The first method although is straightforward to apply has two main
 disadvantages. First of all it requires a large number of particles in
@@ -143,14 +143,14 @@ The second method solves the two problems mentioned above. It works
 with low particles numbers and does not involve data binning. However,
 it effectively takes into account a single data point and discards the
 behaviour of the ratio $V_{cirv}/V_{vir}$ below and above its
-maxima. 
+maxima.
 
 In this paper we propose a new method to estimate the dark matter halo
 concentration from N-body simulation results. This method has two
 advantages with respect to the methods mentioned above. First, it does
 not involve data binning. Second, it does not throw away data
 points. Third, it allows for an straightforward estimation of the
-uncertainties in the concentration parameter. 
+uncertainties in the concentration parameter.
 
 Our method consists in building the cumulative mass profile from the
 particle data in the N-body simulation to find the best possible
@@ -181,7 +181,7 @@ relationship. We present our conclusions in Section \ref{sec:conclusions}.
 The NFW density profile can be written as
 
 \begin{equation}
-\rho(r) = \frac{\rho_c\delta_c}{r/r_s(1+r/r_s)^2}, 
+\rho(r) = \frac{\rho_c\delta_c}{r/r_s(1+r/r_s)^2},
 \label{eq:definition}
 \end{equation}
 %
@@ -189,13 +189,13 @@ where $\rho_c\equiv 3H^2/8\pi G$ is the Universe critical density,
 $\delta_c$ is the halo dimensionless characteristic density and $r_s$
 is known as the scale radius, the radius that marks the transition
 between the power law scaling $\rho\propto r^{-1}$ for
-$r<r_s$ and $\rho\propto r^{-3}$ for  $r>r_s$.  
+$r<r_s$ and $\rho\propto r^{-3}$ for  $r>r_s$.
 
 We define the virial radius of a halo, $r_v$, as the boundary of the
 spherical volume that encloses a density of $\Delta_h$ times
 the average density of the Universe. The corresponding mass $M_{v}$,
 the virial mass, can be written as $M_{v} =
-\frac{4\pi}{3}\bar{\rho}\Delta_h r_v^3$. 
+\frac{4\pi}{3}\bar{\rho}\Delta_h r_v^3$.
 
 
 \subsection{Integrated Mass}
@@ -205,7 +205,7 @@ radius $r$:
 M(<r) = 4\pi\rho_c\delta_c  r_s^3\left[\ln \left
   (\frac{r_s+r}{r}\right) - \frac{r}{r_s+r}\right].
 \end{equation}
- 
+
 We express the same quantity in terms of dimensionless
 variables $x\equiv r/r_v$ and $m\equiv M(<r)/M_v$,
 %
@@ -215,7 +215,7 @@ m(<x) =
 \label{eq:profile}
 \end{equation}
 %
-where 
+where
 %
 \begin{equation}
 A=\ln\left(1+c\right)-\left(\frac{c}{c+1}\right),
@@ -224,7 +224,7 @@ A=\ln\left(1+c\right)-\left(\frac{c}{c+1}\right),
 and the parameter $c$ is known as the concentration $c\equiv r_v/r_s$.
 
 From this normalization value and for later convenience we define the
-following function 
+following function
 %
 \begin{equation}
 f(x) = \ln\left(1+x\right)-\left(\frac{x}{x+1}\right).
@@ -234,9 +234,9 @@ f(x) = \ln\left(1+x\right)-\left(\frac{x}{x+1}\right).
 
 The most interesting feature of Eq. (\ref{eq:profile}) is that the
 concentration is the only free parameter to describe the density
-profile. In Figure \ref{fig:profiles} we show $m(<x)$ as 
+profile. In Figure \ref{fig:profiles} we show $m(<x)$ as
 a function of $x$ for different values of the concentration in the range
-$1\leq c \leq 20$.  
+$1\leq c \leq 20$.
 
 \begin{figure}
 \begin{center}
@@ -257,20 +257,20 @@ to have:
 
 
 In Figure \ref{fig:velocity} we show the circular velocity profile for the same
-concentrations as in Figure \ref{fig:profiles}. 
+concentrations as in Figure \ref{fig:profiles}.
 
 \begin{equation}
 v(<x)=\sqrt{\frac{1}{A}\left[\frac{\ln\left(1+xc\right)}{x}-\frac{c}{xc+1}\right]},
 \end{equation}
 %
 this normalized profile always shows a maximum provided that the
-concentration is larger than a values of $c>???$. 
+concentration is larger than a values of $c>???$.
 It is possible to show that for the NFW profile the maximum is
-provided by 
+provided by
 
 \begin{equation}
 \mathrm{max}(v(<x)) = \sqrt{\frac{c}{x_{\rm max}}\frac{f(x_{\rm
-      max})}{f(c)}}, 
+      max})}{f(c)}},
 \label{eq:max_v}
 \end{equation}
 where $x_{\rm max}=2.163$ and the function $f(x)$ was defined in Eq. (\ref{eq:f_NFW}).
@@ -288,21 +288,21 @@ where $x_{\rm max}=2.163$ and the function $f(x)$ was defined in Eq. (\ref{eq:f_
 \label{sec:method}
 
 Once the density profile is expressed in dimensionless variables the
-only free variable is the concentration. 
+only free variable is the concentration.
 There are two main methods to estimate this values in dark matter
 halos extracted from N-body simulations.
 The first method bins the particles in the logarithm of the radial
 coordinate from the halo center to estimate the density in each
-logarithmic bin. 
+logarithmic bin.
 Then a direct fit to the density as a function of the radial
 coordinate is performed. This method has been most recently advocated
 by \cite{Ludlow2014} to study the mass-concentration-redshift relation
 of dark matter halos using the Millennium Simulation Series.
 
-A second method uses the circular velocity profile. 
+A second method uses the circular velocity profile.
 As it was shown in Fig. (\ref{fig:velocity}) the circular velocity
 shows a maximum for all profiles with concentration values larger than
-$c>???$. 
+$c>???$.
 For the numerical halos wne can then find the value of $x$ for which
 the normalized circular velocity $v(<x)$ shows a maximum and solve
 numerically for the corresponding value of the concentration using
@@ -315,45 +315,37 @@ We estimate the concentration parameter by fitting the
 integrated mass profile described in Equation
 (\ref{eq:profile}). First we define the center of the halo to be  at
 the position of the particle with the lowest gravitational
-potential. 
+potential.
 
 We construct the integrated mass profile by ranking the particles by
 their increasing distance to the center of the halo. Once they are ranked,
 the total mass at a radius $r_i$, increases by $m_p$, where $r_i$ is
 the position of the $i$-th particle and $m_p$ is the mass of the
 computational particle.  In this process we discard the
-particle at the center.  
+particle at the center.
 
 We stop the construction of the integrated mass profile once we arrive
 at an average density of $\Delta_h\bar{\rho}$, with $\Delta_h=740$,
 roughly corresponding to 200 times the critical density. This radius marks the
 virial radius and the virial mass. We divide the total mass enclosed
 mass $M_i$ and the radii $r_i$ by these values to obtain the
-dimensionless variables $x_i$ and $m_i$. 
+dimensionless variables $x_i$ and $m_i$.
 
 Using these new variables we define the following $\chi^2$ function
 
 \begin{equation}
-\chi^2(c) = \sum_{i}[\log m_i - \log m(< x_i;c)]^2, 
+\chi^2(c) = \sum_{i}[\log m_i - \log m(< x_i;c)]^2,
 \end{equation}
 %
 where $m(<x_i;c)$ corresponds to the values in Eq.(\ref{eq:profile}) at
-$x=x_i$ for a given value of the concentration parameter $c$. 
+$x=x_i$ for a given value of the concentration parameter $c$.
 
 We sample the likelihood function distribution defined by ${\cal
-  L}(c)=\exp(-\chi^2(c)/2)$ with a Metropolos-Hastings algorithms to
+  L}(c)=\exp(-\chi^2(c)/2)$ with a Metropolis-Hastings algorithm to
 find the optimum value of $c$ and its  associated uncertainty
-$\sigma_c$.  
-
-
-{\bf Cuantos pasos usa la cadena? (50000) De cuanto es el sigma en
-los saltos de c en lca cadena? (0.029)
-
-Falta alguna figura que muestre resultados de la -log likelihood para
-algunos casos representativos.
-}
-
-
+$\sigma_c$. We used 50000 steps for walk, where each step was randomly generated
+with a normal distribution centered around the last step with an standard
+deviation of $\sigma=0.03$.
 
 \section{Results}
 \label{sec:results}
@@ -374,10 +366,10 @@ mass profile. Given the number of particles $n$ and the concentration
 $c$ we define the mass element as $\delta m = 1/n$ (this corresponds
 to the mass of each particle such that the total mass is one). Then
 for each number $k$ from $1$ to $n$ we find the value of $r$ such that
-the difference 
+the difference
 %
 \begin{equation}
-m(<r;c)-k \cdot \delta m 
+m(<r;c)-k \cdot \delta m
 \end{equation}
 %
 is zero using Ridders' method. This value of $r$ is the radius of
@@ -385,14 +377,14 @@ the $k$th particle of the generated halo, then polar and azimuthal
 angles $\theta$ and $\phi$ are randomly generated. Finally these three
 coordinates are transformed into cartesian coordinates
 $(r,\theta,\phi) \rightarrow (x,y,z)$. This process is repeated $n$
-times in order to generate the $x,y,z$ coordinates for each particle. 
- 
+times in order to generate the $x,y,z$ coordinates for each particle.
+
 
 
 We generate $100$ mock halos with concentration values randomly
 placed in the range $1<c<20$. Each one of the halos is generated with
 four different total particle numbers: $20$, $200$, $2000$ and
-$20000$. This gives us a total of $500$ halos. 
+$20000$. This gives us a total of $500$ halos.
 
 
 \begin{figure}
@@ -423,7 +415,7 @@ follows the non-linear evolution of a dark matter density field
 sampled with $2048^3$ particles over a cubic box of $1000$ \hMpc on a
 side. The data is publicly available, more details about the structure
 of the database and the simulations can be found in
-\citep{2013AN....334..691R}. 
+\citep{2013AN....334..691R}.
 
 We select a sample of halos in a cubic sub-volumne of $100$ \hMpc on a
 side centered on the most massive halo in the simulation at
@@ -441,7 +433,7 @@ all the particles that belong to it. From the particles we follow the
 procedure spelled out in Section \ref{sec:method} with $\Delta_h=740$
 (corresponding to $200$ times the critical density) to find the
 halo concentration. Finally, we store the values obtained for the
-virial radius, virial mass and concentration. 
+virial radius, virial mass and concentration.
 
 
 
@@ -455,11 +447,11 @@ We compared this method against two methods: The first one consists in
 using shells for estimating the density in function of the radius and
 using the same MCMC method for fitting and the second one consists in
 using the circular velocity $V(r)=\sqrt{GM(<r)/r}$ and the relation
-for the NFW profile 
+for the NFW profile
 \begin{equation}
 \frac{V_{max}}{V(r_{v})} = \sqrt{\frac{0.216c}{M(r_{v};c)}}
 \end{equation}
-Where $V_{max}$ is the maximum velocity, to find the value of the concentration. We tested the three methods using the same data from the Mock Halos test. In order to see the accuracy of each method depending on the number of particles we define 
+Where $V_{max}$ is the maximum velocity, to find the value of the concentration. We tested the three methods using the same data from the Mock Halos test. In order to see the accuracy of each method depending on the number of particles we define
 
 \begin{equation}
 \xi(n)=\frac{1}{\left|{\cal{H}}_n\right|}\sum_{{\cal{H}}_n}\left|\frac{c_{org}-c_{obt}}{c_{org}}\right|
@@ -494,13 +486,13 @@ the ones obtained by the density method. However the concentrations
 obtained by the velocity method are barey higher (around 2\% or 3\%)
 than the ones obtained by our method. We did not find any significant
 variation in the concentration values obtained by any method by
-changing ${\sigma}^2$ in contrast with FIXME. 
+changing ${\sigma}^2$ in contrast with FIXME.
 
 
 
 
 \subsection{Impact on the mass-concentration relationship}
-Aditionally we compared those three methods plotting the concentration as a function of the number of particles of each halo 
+Aditionally we compared those three methods plotting the concentration as a function of the number of particles of each halo
 
 \begin{figure}
 \begin{center}
